minimumBribes +1